syntax = "proto3";

package greet;

option go_package = "github.com/byegates/gRPC-go/greet/proto";

/*
PACKAGE=github.com/byegates/gRPC-go
PROTO_DIR=greet/proto
protoc -I ${PROTO_DIR} --go_opt=module=${PACKAGE} --go_out=. --go-grpc_opt=module=${PACKAGE} --go-grpc_out=. ${PROTO_DIR}/dummy.proto
*/


message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetStream (GreetRequest) returns (stream GreetResponse);
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
    rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
    rpc GreetWithDeadline (GreetRequest) returns (GreetResponse);
}